tdf#111773 Fix selection after merge cells in an Impress table

Change-Id: I800c4fb8c37c07fb771f4310b207e459119a8e60